Fixed text wrapping for reals

--- a/src/styles/_body-border.css
+++ b/src/styles/_body-border.css
@@ -4,4 +4,5 @@
 	padding:40px 10px;
 	margin-bottom:20px;
 	word-wrap: break-word;
+	word-break:break-word;
 }
